-issue#5143: When a Device has zero Graphs or Data Sources, it does not display the correct value
-issue#5145: Changing SNMP settings to None leaves Bulk Walk Maximum Repititions visible
-issue#5147: Error 500 on apache when changing languages
-issue#5150: The Import Package cli script displays the wrong 'info' parameter
-issue#5151: Templates appear to lose their suggested name values
-issue#5155: Local Linux Machine Device Package Damaged
-issue#5159: Cannot turn on publishing when editing
-issue#5160: Translations on debian 'Bullseye' systems may cause server errors
-issue#5161: Switching language in the settings only becomes active after removal of session cookie
-issue#5166: Plugin permission is not shown in correct role section
-issue#5167: Graph template for NetSNMP lmsensors missing
-issue#5168: Import Package is misleading when reviewing Device Template Changes
-issue#5169: Host table status_fail_date and Status_rec_date can appear wrong
-issue#5170: Prevent remote polling functionality from running unless remote pollers are configured
-issue#5174: Empty Location when adding new device
-issue#5180: Audit Database has issues with storage engine compare
-issue#5181: Poller functions can cause SQL errors in some cases when working with remote data collectors
-issue#5182: Graph Image does not have check for Remote Agent
-issue#5184: Cacti permission checks generate SQL errors is the user has been deleted
-issue#5185: Repair Database does not prune old Poller Item Records
-issue#5187: Getting SQL errors in the Cacti due to plugin calling register function in wrong location
-issue#5188: Device Template Filter broken
-issue#5190: When using Gradient Support GPRINT Text Format is misaligned
-issue#5194: CSRF directory needs to be writeable for creating the csrf-secret.php file
-issue#5195: Spikekill Backtrace Argument #1 ($string) must be passed by reference, value given
-issue#5196: Gradient support breaks certain Graphs with special characters in them